<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ant_device_background"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/card_default_padding">

            <TextView
                android:id="@+id/ant_device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_device_id" />

            <TextView
                android:id="@+id/ant_device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_ant_hr" />

            <TextView
                android:id="@+id/ant_device_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_80_bpm" />
        </LinearLayout>

        <idv.markkuo.cscblebridge.antrecyclerview.BroadcastButtonView
            android:id="@+id/broadcast_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/broadcast_button_end_padding"
            android:paddingEnd="@dimen/broadcast_button_end_padding"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
